[package]
name = "calibration"
version = "0.1.0"
edition = "2021"
publish = false
description = "Calibration bench: measures hash stability and discrimination of the p3d-spectral pipeline against controlled mesh perturbations."

[dependencies]
spectral3d = { path = "../spectral3d" }
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
rand = "0.10.1"
rand_distr = "0.6.0"
